--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     }
   </style>
   <link rel="stylesheet" type="text/css" href="configs/loading/loading.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162793420-2"></script>
+  <script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-162793420-2');
+  </script>
+
   <script>
     /*******************************
      * This is the function you can modify to customize the loading page
